# forex

./: LICENSE  README.org  forex.cabal
Finance/: Forex.hs
Finance/Forex/: GoogleCalc.hs  OER.hs  Types.hs  YQL.hs
