name:                forex
version:             0.0.0.0
synopsis:            Wrapper for various currency exchange rates
description:         
  Pull exchange rate data from the following sources:
  .
  * Google Calculator
  .
  * openexchangerates.org
  .
  * Yahoo Finance (via YQL)
homepage:            http://github.com/womfoo/forex
license:             BSD3
license-file:        LICENSE
author:              Kranium Gikos Mendoza
maintainer:          kranium@gikos.net
copyright:           (c) 2013, Kranium Gikos Mendoza
category:            Finance
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Finance.Forex
  other-modules:
    Finance.Forex.GoogleCalc
    Finance.Forex.OER
    Finance.Forex.Types
    Finance.Forex.YQL
  build-depends:
    aeson >= 0.9,
    base == 4.*,
    bytestring >= 0.10,
    http-conduit >= 2.1,
    http-types >= 0.8,
    mtl >= 2.2,
    safe >= 0.3,
    text >= 0.12,
    time >= 1.5,
    unordered-containers >= 0.2
